<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The OmiROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- mDNIe Options -->
	    <ListPreference
	        android:key="mdnie"
	        android:title="@string/mdnie_title_head"
	        android:summary="@string/mdnie_summary_head"
	        android:entries="@array/mdnie_entries"
	        android:entryValues="@array/mdnie_entries_values"
	        android:defaultValue="6" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_touchkey_title">
	    <!-- Touch key backlight timeout -->
	    <ListPreference 
	        android:key="backlight_timeout"
	        android:title="@string/backlight_timeout_title_head"
	        android:summary="@string/backlight_timeout_summary_head"
	        android:entries="@array/backlight_timeout_entries"
  			android:entryValues="@array/backlight_timeout_entries_values"
  			android:defaultValue="1600" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/category_radio_title"
        android:key="category_radio">
	    <!-- UMTS/HSDPA/HSUPA settings -->
	    <ListPreference
	        android:key="hspa"
	        android:title="@string/hspa_title_head"
	        android:summary="@string/hspa_summary_head"
	        android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:defaultValue="23" />
	</PreferenceCategory>

	<PreferenceCategory
                android:title="@string/category_tvout_title"
                android:key="category_tvout">
		<CheckBoxPreference
			android:key="tvout_enable"
			android:title="@string/tvout_enable_head"
			android:summaryOn="@string/tvout_enable_summary_on"
			android:summaryOff="@string/tvout_enable_summary_nocable"
			android:persistent="false"
			android:enabled="false" />
		<ListPreference
			android:key="tvout_system"
			android:title="@string/tvout_system_head"
			android:summary="@string/tvout_system_summary"
			android:entries="@array/tvout_system_entries"
			android:entryValues="@array/tvout_system_entries_values"
			android:defaultValue="2" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_volume_boost_title"
            android:key="category_volume_boost">
                <!-- Volume Boost -->
                <org.omnirom.device.VolumeBoostPreference
                android:key="volume_boost"
                android:title="@string/volume_boost_title_head"
                android:summary="@string/volume_boost_summary_head" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_dock_audio_title"
            android:key="category_dock_audio">
            <!-- Dock Audio -->
            <CheckBoxPreference
                android:key="cardock_audio"
                android:title="@string/cardock_audio_title_head"
                android:summaryOn="@string/cardock_audio_summary_on"
                android:summaryOff="@string/cardock_audio_summary_off"
                android:persistent="true" />
            <CheckBoxPreference
                android:key="deskdock_audio"
                android:title="@string/deskdock_audio_title_head"
                android:summaryOn="@string/deskdock_audio_summary_on"
                android:summaryOff="@string/deskdock_audio_summary_off"
                android:persistent="true" />
        </PreferenceCategory>

</PreferenceScreen>
